<resources>
    <string name="app_name" translatable="false">FootballStats Collect</string>
    <string name="addUnit" translatable="false">+</string>
    <string name="restUnit" translatable="false">-</string>
    <string name="empty" translatable="false"></string>
    <string name="NameTeamA">Team A</string>
    <string name="NameTeamB">Team B</string>
    <string name="Goals">Goals</string>
    <string name="Injuries">Injuries</string>
    <string name="Passes">Passes</string>
    <string name="ShotsOnTarget">Shots On Target</string>
    <string name="Shots">Shots</string>
    <string name="Fouls">Fouls</string>
    <string name="RedCars">Red Cards</string>
    <string name="YellowCards">Yellow Cards</string>
    <string name="Corners">Corners</string>
</resources>
